<resources>
    <string name="app_name">Orbot</string>
    <string name="app_description">Orbot is a free proxy app that empowers other apps to use the internet more securely. Orbot uses Tor to encrypt your Internet traffic and then hides it by bouncing through a series of computers around the world. Tor is free software and an open network that helps you defend against a form of network surveillance that threatens personal freedom and privacy, confidential business activities and relationships, and state security known as traffic analysis.</string>
    <string name="notifications">Notifications</string>
    <string name="menu_settings">Orbot Settings</string>
    <string name="system_vpn_settings">Android VPN Settings</string>
    <string name="menu_log">Log</string>
    <string name="menu_about">About</string>
    <string name="main_layout_download">Download</string>
    <string name="main_layout_upload">Upload</string>
    <string name="menu_exit">Exit</string>
    <string name="wizard_details_msg">Orbot is an open-source application that contains Tor, IPtProxy (Obfs4Proxy, Meek, Snowflake), Go-Tun2Socks and LibEvent. It provides a VPN tunnel, a local HTTP Connect proxy (HTTPS only on port 8118) and a SOCKS proxy (9050) into the Tor network.</string>
    <string name="pref_general_group">General</string>
    <string name="pref_start_boot_title">Start Orbot on Boot</string>
    <string name="pref_start_boot_summary">Automatically start Orbot and connect Tor when your Android device boots</string>
    <string name="pref_node_configuration">Node Configuration</string>
    <string name="pref_node_configuration_summary">These are advanced settings that can reduce your anonymity</string>
    <string name="pref_entrance_node">Entrance Nodes</string>
    <string name="pref_entrance_node_summary">Fingerprints, nicks, countries and addresses for the first hop</string>
    <string name="pref_entrance_node_dialog">Enter Entrance Nodes</string>
    <string name="pref_allow_background_starts_title">Allow Background Starts</string>
    <string name="pref_allow_background_starts_summary">Let any app tell Orbot to start Tor and related services</string>
    <string name="pref_proxy_title">Outbound Network Proxy (Optional)</string>
    <string name="pref_proxy_type_title">Outbound Proxy Type</string>
    <string name="pref_proxy_type_summary">Protocol to use for proxy server: HTTP, HTTPS, SOCKS4, SOCKS5</string>
    <string name="pref_proxy_type_dialog">Enter Proxy Type</string>
    <string name="pref_proxy_host_title">Outbound Proxy Host</string>
    <string name="pref_proxy_host_summary">Proxy Server hostname</string>
    <string name="pref_proxy_host_dialog">Enter Proxy Host</string>
    <string name="pref_proxy_port_title">Outbound Proxy Port</string>
    <string name="pref_proxy_port_summary">Proxy Server port</string>
    <string name="pref_proxy_port_dialog">Enter Proxy port</string>
    <string name="pref_proxy_username_title">Outbound Proxy Username</string>
    <string name="pref_proxy_username_summary">Proxy Username (Optional)</string>
    <string name="pref_proxy_username_dialog">Enter Proxy Username</string>
    <string name="pref_proxy_password_title">Outbound Proxy Password</string>
    <string name="pref_proxy_password_summary">Proxy Password (Optional)</string>
    <string name="pref_proxy_password_dialog">Enter Proxy Password</string>
    <string name="error">Error</string>
    <string name="exit_nodes">Exit Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_for_the_last_hop">Fingerprints, nicks, countries and addresses for the last hop</string>
    <string name="enter_exit_nodes">Enter Exit Nodes</string>
    <string name="exclude_nodes">Exclude Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_to_exclude">Fingerprints, nicks, countries and addresses to exclude</string>
    <string name="enter_exclude_nodes">Enter Exclude Nodes</string>
    <string name="strict_nodes">Strict Nodes</string>
    <string name="strict_nodes_description">Treat Exclude Nodes settings as a requirement for building all circuits. This may break functionality if no circuits are able to be generated with your Exclude Nodes settings.</string>
    <string name="reachable_addresses">Reachable Addresses</string>
    <string name="run_as_a_client_behind_a_firewall_with_restrictive_policies">Run as a client behind a firewall with restrictive policies</string>
    <string name="reachable_ports">Reachable ports</string>
    <string name="ports_reachable_behind_a_restrictive_firewall">Ports reachable behind a restrictive firewall</string>
    <string name="enter_ports">Enter ports</string>
    <string name="enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_">Enable debug log to output (must use adb or aLogcat to view)</string>
    <string name="project_home">Project Home:</string>
    <string name="orbot_url" translatable="false">https://orbot.app/</string>
    <string name="orbot_github" translatable="false">https://github.com/guardianproject/orbot/</string>
    <string name="tor_url" translatable="false">Tor v%s: https://www.torproject.org</string>
    <string name="obfs4_url" translatable="false">Lyrebird v%s: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/lyrebird</string>
    <string name="snowflake_url" translatable="false">Snowflake v%s: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake</string>
    <string name="openssl_url" translatable="false">OpenSSL: http://www.openssl.org</string>
    <string name="third_party_software">3rd-Party-Software: </string>
    <string name="version">Version:</string>
    <string name="license">License:</string>
    <string name="hidden_service_request">An app wants to open onion server on port %1$s to the Tor network. This is safe if you trust the app.</string>
    <string name="pref_use_expanded_notifications">Display in the notification the country and IP Address of your Tor exit node when available</string>
    <string name="pref_use_expanded_notifications_title">Expanded Notifications</string>
    <string name="set_locale_title">Language</string>
    <string name="pref_disable_network_title">No Network Auto-Sleep</string>
    <string name="pref_disable_network_summary">Put Tor to sleep when there is no internet available</string>
    <string name="newnym">You\'ve switched to a new Tor identity!</string>
    <string name="pref_open_proxy_on_all_interfaces_title">Open Proxy on All Interfaces</string>
    <string name="pref_open_proxy_on_all_interfaces_summary">Allow Wi-Fi peers, tethered devices and anyone else who can connect to your IP, to access Tor</string>
    <string name="pref_socks_title">Tor SOCKS</string>
    <string name="pref_socks_summary">Port that Tor offers its SOCKS proxy on (default: 9050 or 0 to disable)</string>
    <string name="pref_socks_dialog">SOCKS Port Config</string>
    <string name="pref_http_title">Tor HTTP</string>
    <string name="pref_http_summary">Port that Tor offers its HTTP proxy on (default: 8118 or 0 to disable)</string>
    <string name="pref_http_dialog">HTTP Port Config</string>
    <string name="pref_transport_title">Tor TransProxy Port</string>
    <string name="pref_transport_summary">Port that Tor offers its Transparent Proxy on (default: 9040 or 0 to disable)</string>
    <string name="pref_transport_dialog">TransProxy Port Config</string>
    <string name="pref_dnsport_title">Tor DNS Port</string>
    <string name="pref_dnsport_summary">Port that Tor offers its DNS on (default: 9053 or 0 to disable)</string>
    <string name="pref_dnsport_dialog">DNS Port Config</string>
    <string name="pref_torrc_title">Torrc Custom Config</string>
    <string name="pref_torrc_summary">EXPERTS ONLY: enter direct torrc config lines</string>
    <string name="pref_torrc_dialog">Custom Torrc</string>
    <string name="kibibyte">KiB</string>
    <string name="mebibyte">MiB</string>
    <string name="vpn_default_world">Global (Auto)</string>
    <string name="hidden_services">Onion Services</string>
    <string name="v3_hosted_services">Hosted Onion Services</string>
    <string name="v3_client_auth_activity_title">Client Authorization</string>
    <string name="v3_key_hash">x25519 Private Key in Base32</string>
    <string name="v3_onion">.onion Domain</string>
    <string name="v3_backup_key">Backup Client Authorization Key</string>
    <string name="v3_backup_key_warning">Warning: This could expose your key to other apps</string>
    <string name="v3_delete_client_authorization">Delete Client Authorization Key</string>
    <string name="v3_delete_client_authorization_confirm">Delete Client Authorization</string>
    <string name="v3_backup_name_hint">Backup filename…</string>
    <string name="v3_import_auth_private">Import .auth_private</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="local_port">Local Port</string>
    <string name="onion_port">Onion Port</string>
    <string name="name">Name</string>
    <string name="done">Done!</string>
    <string name="copy_address_to_clipboard">Copy address to clipboard</string>
    <string name="backup_service">Backup Service (Warning: This Could Expose Your Service Configuration to Other Apps)</string>
    <string name="delete_service">Delete Service</string>
    <string name="backup_saved_at_external_storage">Backup saved at external storage</string>
    <string name="backup_restored">Backup restored</string>
    <string name="backup_port_exist">Error: An Onion service is already using port %s</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="confirm_service_deletion">Confirm service deletion</string>
    <string name="service_type">Service type</string>
    <string name="please_restart_Orbot_to_enable_the_changes">Please restart Orbot to enable the changes</string>
    <string name="onion" translatable="false">.onion</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="consider_disable_battery_optimizations">Hosted services running, consider disabling battery optimizations</string>
    <string name="consider_enable_battery_optimizations">No hosted services running, consider enabling battery optimizations</string>
    <string name="pref_isolate_dest">Isolate destination addresses</string>
    <string name="pref_isolate_dest_summary">Use a different circuit for each destination address</string>
    <string name="pref_isolate_port">Isolate destination ports</string>
    <string name="pref_isolate_port_summary">Use a different circuit for each destination port</string>
    <string name="pref_isolate_protocol">Isolate client protocols</string>
    <string name="pref_isolate_protocol_summary">Use a different circuit for each connecting protocol</string>
    <string name="pref_isolate_keep_alive">Keep isolated circuits alive</string>
    <string name="connect">Connect</string>
    <string name="menu_kindness">Kindness</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_mesh">Mesh</string>
    <string name="menu_task_manager">Tasks</string>
    <string name="menu_more">More</string>
    <string name="mesh_network_title">Mesh Network</string>
    <string name="mesh_network_description">Connect with nearby devices using mesh networking for censorship-resistant communication.</string>
    <string name="mesh_gateway_status">Gateway Status</string>
    <string name="enable_gateway">Enable Gateway</string>
    <string name="mesh_status_title">Mesh Status</string>
    <string name="mesh_status_disconnected">Disconnected</string>
    <string name="mesh_peers_none">No peers connected</string>
    <string name="refresh_mesh_status">Refresh</string>
</resources>