<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/connectFragment"
        android:icon="@drawable/ic_onion"
        android:title="@string/connect"/>
    <item
        android:id="@+id/kindnessFragment"
        android:icon="@drawable/ic_kindness_selector"
        android:title="@string/menu_kindness"/>
    <item
        android:id="@+id/friendsFragment"
        android:icon="@drawable/ic_friends"
        android:title="@string/menu_friends"/>
    <item
        android:id="@+id/meshFragment"
        android:icon="@drawable/ic_mesh_network"
        android:title="@string/menu_mesh"/>
    <item
        android:id="@+id/taskManagerFragment"
        android:icon="@drawable/ic_task_manager"
        android:title="@string/menu_task_manager"/>
    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_more"
        android:title="@string/menu_more"/>
</menu>